--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top">
@@ -23,9 +26,67 @@
                 <input type="button" class="signup-top" value="Sign up">
             </div>
             <div class="upper_image">
-                <img src="c:\Users\Ethan\Downloads\pexels-tyler-nix-1259808-2396220.jpg">
+                <img src="c:\Users\Ethan\Downloads\pexels-fecundap6-437716.jpg" class="image_upper" alt="pretty latte art ">
             </div>
         </div>
+    </div>
+
+    <div class="info-random">
+        <div class="header-random">
+            <p class="random-info">
+                Some random information
+            </p>
+        </div>
+        <div class="card-containers">
+            <div class="1 card">
+                <img src="c:\Users\Ethan\Downloads\pexels-edwardeyer-2228827.jpg" alt="coffee cup in sunlight" class="random-image">
+                <p class="random-p">
+                    this is some subtext under an illusration or image
+                </p>
+            </div>
+            <div class="2 card">
+                <img src="c:\Users\Ethan\Downloads\pexels-olenkabohovyk-3749174.jpg" alt="chemex machine and coffee cup" class="random-image">
+                <p class="random-p">
+                    this is some subtext under an illusration or image
+                </p>
+            </div>
+            <div class="3 card">
+                <img src="c:\Users\Ethan\Downloads\pexels-viktoria-alipatova-1083711-2668498.jpg" alt="espresso being brewed" class="random-image">
+                <p class="random-p">
+                    this is some subtext under an illusration or image
+                </p>
+            </div>
+            <div class="4 card">
+                <img src="c:\Users\Ethan\Downloads\pexels-dariaobymaha-1691924.jpg" alt="lady holding pretty latte" class="random-image">
+                <p class="random-p">
+                    this is some subtext under an illusration or image
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote-section">
+        <div class="quote-container">
+            <p class="quote">This is an inspirirng quote, or a testimonilal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <div class="thor">  
+                <p class="author">-Thor, God of Thunder</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom-div">
+        <div class="cta_container">
+            <div class="call">
+                <p class="action"> Call to action! It's time!</p>
+                <p class="sign">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <input type="button" class="bottom-button" value="Sign up">
+        </div>
+    </div>
+
+    <div class="footer">
+        <p class="copyright">Copywright The Odin Project 2021</p>
+
     </div>
 </body>
 </html>
