--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="button" class="signup-top" value="Sign up">
             </div>
             <div class="upper_image">
-                <img src="c:\Users\Ethan\Downloads\pexels-fecundap6-437716.jpg" class="image_upper" alt="pretty latte art ">
+                <img src="c:\Users\Ethan\repos\landing_page\images\pexels-dariaobymaha-1691924.jpg" class="image_upper" alt="pretty latte art ">
             </div>
         </div>
     </div>
@@ -67,7 +67,7 @@
 
     <div class="quote-section">
         <div class="quote-container">
-            <p class="quote">This is an inspirirng quote, or a testimonilal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <div class="thor">  
                 <p class="author">-Thor, God of Thunder</p>
             </div>
