testing for image loading

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="button" class="signup-top" value="Sign up">
             </div>
             <div class="upper_image">
-                <img src="c:\Users\Ethan\repos\landing_page\images\pexels-dariaobymaha-1691924.jpg" class="image_upper" alt="pretty latte art ">
+                <img src="images/pexels-dariaobymaha-1691924.jpg" class="image_upper" alt="pretty latte art ">
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
     <div class="info-random">
         <div class="header-random">
             <p class="random-info">
-                Some random information
+                Some random informatio
             </p>
         </div>
         <div class="card-containers">
