added updated image files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="button" class="signup-top" value="Sign up">
             </div>
             <div class="upper_image">
-                <img src="images/pexels-dariaobymaha-1691924.jpg" class="image_upper" alt="pretty latte art ">
+                <img src="images/pexels-fecundap6-437716.jpg" class="image_upper" alt="pretty latte art ">
             </div>
         </div>
     </div>
@@ -39,25 +39,25 @@
         </div>
         <div class="card-containers">
             <div class="1 card">
-                <img src="c:\Users\Ethan\Downloads\pexels-edwardeyer-2228827.jpg" alt="coffee cup in sunlight" class="random-image">
+                <img src="images/pexels-edwardeyer-2228827.jpg" alt="coffee cup in sunlight" class="random-image">
                 <p class="random-p">
                     this is some subtext under an illusration or image
                 </p>
             </div>
             <div class="2 card">
-                <img src="c:\Users\Ethan\Downloads\pexels-olenkabohovyk-3749174.jpg" alt="chemex machine and coffee cup" class="random-image">
+                <img src="images/pexels-olenkabohovyk-3749174.jpg" alt="chemex machine and coffee cup" class="random-image">
                 <p class="random-p">
                     this is some subtext under an illusration or image
                 </p>
             </div>
             <div class="3 card">
-                <img src="c:\Users\Ethan\Downloads\pexels-viktoria-alipatova-1083711-2668498.jpg" alt="espresso being brewed" class="random-image">
+                <img src="images/pexels-viktoria-alipatova-1083711-2668498.jpg" alt="espresso being brewed" class="random-image">
                 <p class="random-p">
                     this is some subtext under an illusration or image
                 </p>
             </div>
             <div class="4 card">
-                <img src="c:\Users\Ethan\Downloads\pexels-dariaobymaha-1691924.jpg" alt="lady holding pretty latte" class="random-image">
+                <img src="images/pexels-dariaobymaha-1691924.jpg" alt="lady holding pretty latte" class="random-image">
                 <p class="random-p">
                     this is some subtext under an illusration or image
                 </p>
