--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="info-random">
         <div class="header-random">
             <p class="random-info">
-                Some random informatio
+                Some random information
             </p>
         </div>
         <div class="card-containers">
